src/test/deca/context/valid/class/equals/override.deca
// Description:
//    Override de la methode equals
//
// Resultats:
//    Aucune erreur

class A {
	boolean equals(A a) {
		return true;
	}
}

{

}
