src/test/deca/context/invalid/decl_init/init_string_in_bool.deca
// Description:
//    Déclaration de variables
//
// Resultats:
//    Line 8 : Incompatible type initialization

{
   boolean a = "test";
}
